--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main>
+      <h1>I hate projects preparing</h1>
+    </main>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
