Side Bar Markup

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main>
+      <include src="./partials/index/side-bar/side-bar.html"></include>
+    </main>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
