Main-Section-Index

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/index/side-bar/side-bar.html"></include>
+      <include src="./partials/index/main-section/section.html"></include>
     </main>
     <script src="./index.js" type="module"></script>
   </body>
