Index Aside Partials

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/index/side-bar/side-bar.html"></include>
+      <aside>
+        <include src="./partials/index/side-bar/category-set.html"></include>
+        <include src="./partials/index/side-bar/slider.html"></include>
+      </aside>
       <include src="./partials/index/main-section/section.html"></include>
     </main>
     <script src="./index.js" type="module"></script>
