--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -16,6 +16,12 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main>
+      <div class="container shop-list-container">
+        <aside class="side-bar">
+          <include src="./partials/index/side-bar/slider.html"></include>
+        </aside>
+      </div>
+    </main>
   </body>
 </html>
