--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
         </aside>
         <include src="./partials/index/main-section/section.html"></include>
       </div>
+      <!-- <div class="js-backdrop-modal">
+        <include src="./partials/modals/register-modal.html"></include>
+        <include src="./partials/modals/login-modal.html"></include>
+      </div> -->
     </main>
     <script src="./index.js" type="module"></script>
   </body>
