style-import-options

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -23,5 +23,7 @@
         </aside>
       </div>
     </main>
+    <div id="pagination" class="tui-pagination"></div>
+    <script src="./js/pagination.js" type="module"></script>
   </body>
 </html>
