--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+     <script src="./index.js" type="module"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -20,6 +21,12 @@
       <include src="./partials/index/side-bar/side-bar.html"></include>
       <include src="./partials/index/main-section/section.html"></include>
     </main>
-    <script src="./index.js" type="module"></script>
+      
+    <!-- <script src="./js/vendors/swiper-bundle.min.js" type="module"></script> -->
+
+  <!-- <script src="./js/slider-set.js" type="module"></script> -->
+  
+    <script src="./js/vendors/swiper-bundle.min.js"></script>
+
   </body>
 </html>
