--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="light">
     <include src="./partials/header.html"></include>
     <main>
       <aside>
@@ -24,5 +24,8 @@
       <include src="./partials/index/main-section/section.html"></include>
     </main>
     <script src="./index.js" type="module"></script>
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/theme-switch.js"></script>
+    <script src="./js/open-close.js"></script>
   </body>
 </html>
