--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
         <include src="./partials/modals/register-modal.html"></include>
         <include src="./partials/modals/login-modal.html"></include>
       </div> -->
-      <!-- <div class="js-backdrop-modal">
+      <div class="js-backdrop-modal">
         <include src="./partials/modals/about-book-modal.html"></include>
-      </div> -->
+      </div>
     </main>
 
     <script src="./index.js" type="module"></script>
