--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <include src="./partials/modals/register-modal.html"></include>
         <include src="./partials/modals/login-modal.html"></include>
       </div> -->
-      <div class="js-backdrop-modal">
+      <div class="js-backdrop-modal is-hidden">
         <include src="./partials/modals/about-book-modal.html"></include>
       </div>
     </main>
