--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/theme-switch.js"></script>
     <script src="./js/open-close.js"></script>
+     <script src="./js/vendors/swiper-bundle.min.js"></script>
   </body>
 </html>
 
