--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <include src="./partials/index/side-bar/category-set.html"></include>
         <include src="./partials/index/side-bar/slider.html"></include>
       </aside>
-      <!-- <include src="./partials/index/main-section/section.html"></include> -->
+      <include src="./partials/index/main-section/section.html"></include>
       <include src="./partials/index/main-section/book-section.html"></include>
 
     </div>
