Connect Pagination and Switch-theme
Pagination display, but don't work

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -34,10 +34,10 @@
     </main>
 
     <script type="module" src="./js/shop-list.js"></script>
-    <!-- <script type="module" src="./js/pagination.js"></script> -->
+    <script type="module" src="./js/pagination.js"></script>
     <!-- <script type="module" src="./js/mobile-menu.js"></script> -->
     <!-- <script type="module" src="./js/open-close.js"></script> -->
-    <!-- <script type="module" src="./js/theme-switch.js"></script>  -->
+    <script type="module" src="./js/theme-switch.js"></script>
     <!-- <script type="module" src="./js/vendors/swiper-bundle.min.js"></script> -->
   </body>
 </html>
