Connect styles to index.scss. Some fix

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -38,6 +38,6 @@
     <!-- <script type="module" src="./js/mobile-menu.js"></script> -->
     <!-- <script type="module" src="./js/open-close.js"></script> -->
     <script type="module" src="./js/theme-switch.js"></script>
-    <!-- <script type="module" src="./js/vendors/swiper-bundle.min.js"></script> -->
+    <script type="module" src="./js/vendors/swiper-bundle.min.js"></script>
   </body>
 </html>
