Shop-List AfterFix

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -18,7 +18,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <div class="container shop-list-container">
-        <aside class="side-bar">
+        <aside class="shop-aside">
           <include src="./partials/index/side-bar/slider.html"></include>
         </aside>
         <section class="shopping-list">
@@ -34,7 +34,7 @@
     </main>
 
     <script type="module" src="./js/shop-list.js"></script>
-    <script type="module" src="./js/pagination.js"></script>
+    <!-- <script type="module" src="./js/pagination.js"></script> -->
     <!-- <script type="module" src="./js/mobile-menu.js"></script> -->
     <!-- <script type="module" src="./js/open-close.js"></script> -->
     <script type="module" src="./js/theme-switch.js"></script>
