Change classname to aside in shop-list

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -18,7 +18,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <div class="container shop-list-container">
-        <aside class="side-bar">
+        <aside class="shop-aside">
           <include src="./partials/index/side-bar/slider.html"></include>
         </aside>
         <section class="shopping-list">
