--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="light">
     <include src="./partials/header.html"></include>
     <main>
       <div class="container shop-list-container">
@@ -25,5 +25,6 @@
     </main>
     <div id="pagination" class="tui-pagination"></div>
     <script src="./js/pagination.js" type="module"></script>
+    <script src="./js/theme-switch.js"></script>
   </body>
 </html>
