--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -29,13 +29,13 @@
             <ul class="cart__list list js-cart-list"></ul>
           </div>
 
-          <div id="pagination" class="tui-pagination cart__pagination"></div>
+          <div id="pagination" class="tui-pagination"></div>
         </section>
       </div>
     </main>
 
     <script type="module" src="./js/shop-list.js"></script>
-    <script type="module" src="./js/pagination.js"></script>
+    <!-- <script type="module" src="./js/pagination.js"></script> -->
     <!-- <script type="module" src="./js/mobile-menu.js"></script> -->
     <!-- <script type="module" src="./js/open-close.js"></script> -->
     <script type="module" src="./js/theme-switch.js"></script>
