--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="light">
+  <body>
     <include src="./partials/header.html"></include>
     <main>
       <div class="container shop-list-container">
@@ -40,6 +40,5 @@
     <!-- <script type="module" src="./js/open-close.js"></script> -->
     <script type="module" src="./js/theme-switch.js"></script>
     <script type="module" src="./js/vendors/swiper-bundle.min.js"></script>
-
   </body>
 </html>
