--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,6 @@
     </main>
 
     <script src="./index.js" type="module"></script>
-    <script src="./js/mobile-menu.js"></script>
-    <script src="./js/theme-switch.js"></script>
-    <script src="./js/open-close.js"></script>
-    <script src="./js/vendors/swiper-bundle.min.js"></script>
+    <!-- <script src="./js/vendors/swiper-bundle.min.js"></script> -->
   </body>
 </html>
