--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A storage of saved books that belong to you"
+    />
     <include src="./partials/components/favicon.html"></include>
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./sass/index.scss" />
@@ -34,7 +38,7 @@
       </div>
     </main>
 
-    <script type="module" src="./js/shop-list.js"></script>
+    <script defer type="module" src="./js/shop-list.js"></script>
     <!-- <script type="module" src="./js/pagination.js"></script> -->
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/theme-switch.js"></script>
