move dir Pagination

--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -27,9 +27,8 @@
           </h1>
           <div class="cart js-shopping-cart">
             <ul class="cart__list list js-cart-list"></ul>
+            <div id="pagination" class="cart__pagination tui-pagination"></div>
           </div>
-
-          <div id="pagination" class="tui-pagination"></div>
         </section>
       </div>
     </main>
