--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -38,10 +38,9 @@
     </main>
 
     <script defer type="module" src="./js/shop-list.js"></script>
-    <script type="module" src="./js/mobile-menu.js"></script>
-    <script type="module" src="./js/open-close.js"></script>
-    <script type="module" src="./js/theme-switch.js"></script>
-    
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/open-close.js"></script>
+    <script src="./js/theme-switch.js"></script>
     <script type="module" src="./js/vendors/swiper-bundle.min.js"></script>
   </body>
 </html>
