--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body class="light">
-    <include src="./partials/header.html"></include>
+    <include src="./partials/header-index.html"></include>
     <main>
       <div class="container index-container flex-category">
         <aside class="side-bar">
