--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body class="light">
-    <include src="./partials/header.html"></include>
+    <include src="./partials/header-shop-list.html"></include>
     <main>
       <div class="container shop-list-container">
         <aside class="shop-aside">
