--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
       name="description"
       content="A consistent sort-library that everybody would find easy and simple to use on their own purpose."
     />
-    <include src="./partials/components/favicon.html"></include>
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,6 +19,7 @@
   </head>
 
   <body class="light">
+    <include src="./partials/components/favicon.html"></include>
     <include src="./partials/header-index.html"></include>
     <main>
       <div class="container index-container flex-category">
@@ -42,6 +42,6 @@
       <include src="./partials/modals/about-book-modal.html"></include>
     </div>
 
-    <script defer src="./index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
