--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -8,7 +8,6 @@
       name="description"
       content="A storage of saved books that belong to you"
     />
-    <include src="./partials/components/favicon.html"></include>
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,6 +18,7 @@
     />
   </head>
   <body class="light">
+    <include src="./partials/components/favicon.html"></include>
     <include src="./partials/header-shop-list.html"></include>
     <main>
       <div class="container shop-list-container">
@@ -37,7 +37,7 @@
       </div>
     </main>
 
-    <script defer type="module" src="./js/shop-list.js"></script>
+    <script type="module" src="./js/shop-list.js"></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/open-close.js"></script>
     <script src="./js/theme-switch.js"></script>
