--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -8,6 +8,7 @@
       name="description"
       content="A storage of saved books that belong to you"
     />
+    <include src="./partials/components/favicon.html"></include>
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
